# kaggle-workspace

./: .gitignore  README.md  main.py  memo.md  pyproject.toml
notebooks/: 01_eda_titanic.ipynb  02_baseline_titanic.ipynb  03_anomaly_detection_titanic.ipynb  04_lstm_autoencoder_anomaly_detection.ipynb  04_time_series_anomaly_detection.ipynb  05_xai_shap_titanic.ipynb  eda.ipynb
src/: __init__.py
src/features/: feature_engineering.py
src/models/: train.py
src/utils/: data_loader.py
